--- a/views/Home.html
+++ b/views/Home.html
@@ -1,4 +1,4 @@
-﻿<div data-options="dxView : { name: 'Home', title: 'Kitchen Sink Demo' } " >
+﻿<div data-options="dxView : { name: 'Home', title: 'मैं हूँ संस्कारी' } " >
     <div data-options="dxContent : { targetPlaceholder: 'content' } " >
         <div class="home-splash" data-bind="dxAction: '#Form'" >
             <div class="home-demo-logo"></div>
