make changes part 2

--- a/views/Home.css
+++ b/views/Home.css
@@ -21,7 +21,7 @@
     height: 308px;
     margin-top: -180px;
     margin-left: -117px;
-    background: url(../content/images/demo-logo.png) no-repeat center center;
+    background: url(../content/images/demo-logo.jpg) no-repeat center center;
 }
 
 .home-dx-logo
