--- a/views/Home.html
+++ b/views/Home.html
@@ -1,6 +1,6 @@
 ﻿<div data-options="dxView : { name: 'Home', title: 'मैं हूँ संस्कारी' } " >
     <div data-options="dxContent : { targetPlaceholder: 'content' } " >
-        <div class="home-splash" data-bind="dxAction: '#Form'" >
+        <div class="home-splash" data-bind="dxAction: '#Gallery'" >
             <div class="home-demo-logo"></div>
             <div class="home-dx-logo"></div>
         </div>
